--- a/.chronus/changes/fix_body-2025-3-21-11-48-17.md
+++ b/.chronus/changes/fix_body-2025-3-21-11-48-17.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-Make spread body parameter alwasys be required.
+Make spread body parameter always be required.
