--- a/.chronus/changes/fix-old-link-2025-3-9-15-56-50.md
+++ b/.chronus/changes/fix-old-link-2025-3-9-15-56-50.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-core"
 ---
 
-Update the link documentation for `Azure.Core.Foundations.InnerError`.s
+Update the link documentation for `Azure.Core.Foundations.InnerError`
