upper case docs

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -178,7 +178,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`DelegatedResource`](./data-types.md#Azure.ResourceManager.CommonTypes.DelegatedResource)
 - [`DelegatedResources`](./data-types.md#Azure.ResourceManager.CommonTypes.DelegatedResources)
 - [`Encryption`](./data-types.md#Azure.ResourceManager.CommonTypes.Encryption)
-- [`encryptionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.encryptionProperties)
+- [`EncryptionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.EncryptionProperties)
 - [`ErrorAdditionalInfo`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorAdditionalInfo)
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorDetail)
 - [`ErrorResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorResponse)
@@ -189,7 +189,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`IfNoneMatchHeader`](./data-types.md#Azure.ResourceManager.CommonTypes.IfNoneMatchHeader)
 - [`KeyEncryptionKeyIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.KeyEncryptionKeyIdentity)
 - [`KeyVaultProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.KeyVaultProperties)
-- [`locationData`](./data-types.md#Azure.ResourceManager.CommonTypes.locationData)
+- [`LocationData`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationData)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationParameter)
 - [`ManagedOnBehalfOfConfiguration`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedOnBehalfOfConfiguration)
 - [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentity)
@@ -231,7 +231,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`Sku`](./data-types.md#Azure.ResourceManager.CommonTypes.Sku)
 - [`SubscriptionIdParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.SubscriptionIdParameter)
 - [`SystemAssignedServiceIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.SystemAssignedServiceIdentity)
-- [`systemData`](./data-types.md#Azure.ResourceManager.CommonTypes.systemData)
+- [`SystemData`](./data-types.md#Azure.ResourceManager.CommonTypes.SystemData)
 - [`TenantIdParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.TenantIdParameter)
 - [`TrackedResource`](./data-types.md#Azure.ResourceManager.CommonTypes.TrackedResource)
 - [`UserAssignedIdentities`](./data-types.md#Azure.ResourceManager.CommonTypes.UserAssignedIdentities)
