--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -141,6 +141,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionResource`](./data-types.md#Azure.ResourceManager.ExtensionResource)
 - [`KeysOf`](./data-types.md#Azure.ResourceManager.KeysOf)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.LocationParameter)
+- [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.LocationResourceParameter)
 - [`ManagedByProperty`](./data-types.md#Azure.ResourceManager.ManagedByProperty)
 - [`ManagedServiceIdentityProperty`](./data-types.md#Azure.ResourceManager.ManagedServiceIdentityProperty)
 - [`ManagedSystemAssignedIdentityProperty`](./data-types.md#Azure.ResourceManager.ManagedSystemAssignedIdentityProperty)
@@ -190,7 +191,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`KeyVaultProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.KeyVaultProperties)
 - [`LocationData`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationData)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationParameter)
-- [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationResourceParameter)
 - [`ManagedOnBehalfOfConfiguration`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedOnBehalfOfConfiguration)
 - [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentity)
 - [`ManagedServiceIdentityWithDelegation`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentityWithDelegation)
