Fill out C# paging docs

--- a/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/13pagingOperations.mdx
@@ -46,7 +46,7 @@ def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
 ```
 
 ```csharp
-// TODO
+public virtual Pageable<User> ListWithPage(CancellationToken cancellationToken = default);
 ```
 
 ```typescript
@@ -91,7 +91,7 @@ def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
 ```
 
 ```csharp
-// TODO
+public virtual Pageable<User> ListWithPage(CancellationToken cancellationToken = default);
 ```
 
 ```typescript
