--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -139,6 +139,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`EntityTagProperty`](./data-types.md#Azure.ResourceManager.EntityTagProperty)
 - [`ExtendedLocationProperty`](./data-types.md#Azure.ResourceManager.ExtendedLocationProperty)
 - [`ExtensionResource`](./data-types.md#Azure.ResourceManager.ExtensionResource)
+- [`ExtensionResourceActionScope`](./data-types.md#Azure.ResourceManager.ExtensionResourceActionScope)
 - [`KeysOf`](./data-types.md#Azure.ResourceManager.KeysOf)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.LocationParameter)
 - [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.LocationResourceParameter)
