Adding billing-data common type. This provides standardization of billing properties for Resource Providers with prepaid resource types.

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -172,6 +172,9 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`AccessRuleProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.AccessRuleProperties)
 - [`ApiVersionParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ApiVersionParameter)
 - [`AzureEntityResource`](./data-types.md#Azure.ResourceManager.CommonTypes.AzureEntityResource)
+- [`BillingData`](./data-types.md#Azure.ResourceManager.CommonTypes.BillingData)
+- [`BillingSchedule`](./data-types.md#Azure.ResourceManager.CommonTypes.BillingSchedule)
+- [`BillingScheduleChange`](./data-types.md#Azure.ResourceManager.CommonTypes.BillingScheduleChange)
 - [`CheckNameAvailabilityRequest`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityRequest)
 - [`CheckNameAvailabilityResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityResponse)
 - [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CommonTypes.CustomerManagedKeyEncryption)
