--- a/.chronus/changes/legacy-ops-2025-4-9-11-23-30.md
+++ b/.chronus/changes/legacy-ops-2025-4-9-11-23-30.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-resource-manager"
 ---
 
-Add support for resources with mutiple operation paths
+Add support for resources with multiple operation paths
