Update templates for request body optionality

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -276,6 +276,11 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 - [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
 
+### Operations
+
+- [`ArmCustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.ArmCustomPatchAsync)
+- [`ArmCustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.ArmCustomPatchSync)
+
 ### Models
 
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
