--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -273,6 +273,11 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
 - [`@externalTypeRef`](./decorators.md#@Azure.ResourceManager.Legacy.externalTypeRef)
 
+### Operations
+
+- [`ArmCustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.ArmCustomPatchAsync)
+- [`ArmCustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.ArmCustomPatchSync)
+
 ### Models
 
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
