Remove changes to foundations ArmUpdateOperation

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -278,8 +278,9 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Operations
 
-- [`ArmCustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.ArmCustomPatchAsync)
-- [`ArmCustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.ArmCustomPatchSync)
+- [`CustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchAsync)
+- [`CustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchSync)
+- [`UpdateOperation`](./interfaces.md#Azure.ResourceManager.Legacy.UpdateOperation)
 
 ### Models
 
