--- a/.chronus/changes/opt-body-2025-4-12-19-18-0.md
+++ b/.chronus/changes/opt-body-2025-4-12-19-18-0.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-azure-resource-manager"
 ---
 
-Fix #2275 allow optional request bodies
+Allow optional request bodies in Resource actions templates
