Make request bodies optional (#2674)
Still needs:

- [x] Sample
- [x] Tests
- [x] azure-rest-api-specs-prs

---------

Co-authored-by: Timothee Guerin <timothee.guerin@outlook.com>

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -277,6 +277,12 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 - [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
 
+### Operations
+
+- [`CustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchAsync)
+- [`CustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchSync)
+- [`UpdateOperation`](./interfaces.md#Azure.ResourceManager.Legacy.UpdateOperation)
+
 ### Models
 
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
