--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -134,6 +134,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceUpdatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceUpdatedResponse)
 - [`ArmResponse`](./data-types.md#Azure.ResourceManager.ArmResponse)
 - [`AvailabilityZonesProperty`](./data-types.md#Azure.ResourceManager.AvailabilityZonesProperty)
+- [`BillingDataProperty`](./data-types.md#Azure.ResourceManager.BillingDataProperty)
 - [`DefaultProvisioningStateProperty`](./data-types.md#Azure.ResourceManager.DefaultProvisioningStateProperty)
 - [`EncryptionProperty`](./data-types.md#Azure.ResourceManager.EncryptionProperty)
 - [`EntityTagProperty`](./data-types.md#Azure.ResourceManager.EntityTagProperty)
