Backmerge hotfix for optional dependencies (#2697)
Co-authored-by: Alitzel Mendez <6895254+AlitzelMendez@users.noreply.github.com>
Co-authored-by: Timothee Guerin <timothee.guerin@outlook.com>

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -273,7 +273,18 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
 - [`@externalTypeRef`](./decorators.md#@Azure.ResourceManager.Legacy.externalTypeRef)
 
+### Interfaces
+
+- [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
+
+### Operations
+
+- [`CustomPatchAsync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchAsync)
+- [`CustomPatchSync`](./interfaces.md#Azure.ResourceManager.Legacy.CustomPatchSync)
+- [`UpdateOperation`](./interfaces.md#Azure.ResourceManager.Legacy.UpdateOperation)
+
 ### Models
 
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
 - [`ManagedServiceIdentityV4Property`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4Property)
+- [`Provider`](./data-types.md#Azure.ResourceManager.Legacy.Provider)
