--- a/website/src/content/docs/docs/howtos/Generate client libraries/07types.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/07types.mdx
@@ -15,7 +15,7 @@ The namespace for models, enums, and unions will follow the namespace they belon
 <ClientTabs>
 <ClientTabItem lang="typespec" >
 
-```tsp
+```typespec
 namespace Service;
 
 model Foo {
@@ -66,7 +66,7 @@ Foo foo = new Foo("hello");
 <ClientTabs>
 <ClientTabItem lang="typespec" >
 
-```tsp
+```typespec
 namespace Service;
 
 namespace Container {
@@ -119,7 +119,7 @@ Foo foo = new Foo("hello");
 <ClientTabs>
 <ClientTabItem lang="typespec" >
 
-```tsp
+```typespec
 namespace Service;
 
 @clientNamespace("Service.Container")
@@ -1087,6 +1087,7 @@ model Animal {
 
 </ClientTabItem>
 <ClientTabItem lang="tcgc">
+
 
 ```json
 {
