--- a/website/src/content/docs/docs/howtos/Generate client libraries/08methodInputs.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/08methodInputs.mdx
@@ -14,6 +14,11 @@ This document outlines the method input signatures that language emitters will g
 <ClientTabItem lang="typespec" >
 
 ```typespec
+model User {
+  firstName: string;
+  lastName: string;
+}
+
 @get
 op get(): User;
 ```
@@ -53,7 +58,7 @@ export interface GetUser200Response extends HttpResponse {
 
 export type DemoServiceContext = Client & {
   path: {
-    /** Resource for '/analyze' has methods for the following verbs: post */
+    /** Resource for '/users' has methods for the following verbs: get */
     (path: "/users"): {
       get(
         options: RequestParameters,
@@ -101,6 +106,11 @@ func (client *Client) Get(ctx context.Context, options *ClientGetOptions) (Clien
 <ClientTabItem lang="typespec" >
 
 ```typespec
+model User {
+  firstName: string;
+  lastName: string;
+}
+
 @post
 op post(@body body: User): void;
 ```
@@ -148,7 +158,7 @@ public virtual Response Post(User user, CancellationToken cancellationToken = de
 
 export type DemoServiceContext = Client & {
   path: {
-    /** Resource for '/completions' has methods for the following verbs: post */
+    /** Resource for '/users' has methods for the following verbs: post */
     (path: "/users"): {
       post(
         options: {
@@ -624,7 +634,8 @@ model BlobProperties {
   @path
   name: string;
 
-  @header testHeader: string;
+  @header
+  testHeader: string;
 }
 
 @route("blob_properties/{name}")
