Remove remaining autoRoute

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -317,6 +317,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionOperations`](./interfaces.md#Azure.ResourceManager.Legacy.ExtensionOperations)
 - [`LegacyOperations`](./interfaces.md#Azure.ResourceManager.Legacy.LegacyOperations)
 - [`Operations`](./interfaces.md#Azure.ResourceManager.Legacy.Operations)
+- [`RoutedOperations`](./interfaces.md#Azure.ResourceManager.Legacy.RoutedOperations)
 
 ### Operations
 
