escape tag in docs

--- a/website/src/content/docs/docs/release-notes/release-2025-06-10.mdx
+++ b/website/src/content/docs/docs/release-notes/release-2025-06-10.mdx
@@ -22,7 +22,7 @@ import { LinkCard } from "@astrojs/starlight/components";
 ### @azure-tools/typespec-autorest
 
 - [#2762](https://github.com/Azure/typespec-azure/pull/2762) Emits all path parameters as required even if optional in TypeSpec. Reports a new warning if an optional path parameter is found: `@azure-tools/typespec-autorest/unsupported-optional-path-param`.
-- [#2756](https://github.com/Azure/typespec-azure/pull/2756) Fix HttpPart<File> correctly render as `type:file`
+- [#2756](https://github.com/Azure/typespec-azure/pull/2756) Fix `HttpPart<File>` correctly render as `type:file`
 - [#2607](https://github.com/Azure/typespec-azure/pull/2607) Fix `x-ms-identifiers` being automatically populated, which caused default values to be overwritten unexpectedly. Now, it is only set when explicitly defined.
 - [#2775](https://github.com/Azure/typespec-azure/pull/2775) Models used to construct a multipart body will not be omitted from the definitions
 
