--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -47,12 +47,12 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@clientApiVersions`](./decorators.md#@Azure.ClientGenerator.Core.clientApiVersions)
 - [`@clientDoc`](./decorators.md#@Azure.ClientGenerator.Core.clientDoc)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
+- [`@clientLocation`](./decorators.md#@Azure.ClientGenerator.Core.clientLocation)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
 - [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@deserializeEmptyStringAsNull`](./decorators.md#@Azure.ClientGenerator.Core.deserializeEmptyStringAsNull)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
-- [`@moveTo`](./decorators.md#@Azure.ClientGenerator.Core.moveTo)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@paramAlias`](./decorators.md#@Azure.ClientGenerator.Core.paramAlias)
