--- a/.chronus/changes/copilot-fix-2851-2025-5-17-5-58-51.md
+++ b/.chronus/changes/copilot-fix-2851-2025-5-17-5-58-51.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/azure-http-specs"
 ---
 
-Update @usage decorator tests to adopt new additive logic and add JSON serialization support
+Update `@usage` decorator tests to adopt new additive logic and add JSON serialization support
