--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -86,7 +86,7 @@ client.pet();
 
 </ClientTabs>
 
-### The client has operation groups with a single layer of child groups
+### Client with One-Layer Child Operation Groups
 
 The PetStore includes two operation groups: `Dogs`, which belongs to a subnamespace, and `Cats`, which is part of an interface.
 
