--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -158,7 +158,7 @@ catsClient.pet();
 
 </ClientTabs>
 
-### The client has multi-layer child operation groups
+### Client with Multi-Layer Child Operation Groups
 
 `PetStore` has three operation groups: `Billings` (from an interface), `Pets` (from a sub-namespace), and `Actions` (from an interface). `Pets` also contains a nested operation group, `Actions`, from an interface.
 
